ring0/core-services/management/manifests/05-kamaji/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: kamaji-0.0.0_latest
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: kamaji
    app.kubernetes.io/component: metrics
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
  name: kamaji-metrics-service
  namespace: kamaji-system
spec:
  ports:
    - port: 8080
      name: metrics
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: kamaji
    app.kubernetes.io/component: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: kamaji-0.0.0_latest
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: webhook-service
    app.kubernetes.io/component: webhook
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
  name: kamaji-webhook-service
  namespace: kamaji-system
spec:
  ports:
    - port: 443
      protocol: TCP
      name: webhook-server
      targetPort: webhook-server
  selector:
    app.kubernetes.io/name: kamaji
    app.kubernetes.io/instance: kamaji
    app.kubernetes.io/component: controller-manager
